quick fix for list item spacing

--- a/src/scss/components/_markdown.scss
+++ b/src/scss/components/_markdown.scss
@@ -31,8 +31,10 @@
   h6 {
     font-size: 1.25rem;
   }
+
   img {
     max-width: 400px;
+    border-radius: 2px;
   }
 
   a {
